alteraçoes do Designer

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -9833,7 +9833,7 @@ body{
 }
 
 .side-nav li:hover, li:focus, .side-nav li.active {
-  background-color: #c5e1a5 ;
+  background-color: #e57373 ;
 }
 
 
